force-app/main/default/objects/Customer_Payment__c/Customer_Payment__c.object-meta.xml
<CustomObject>
    <description>Tracks customer payments against opportunities for collection-based commission calculations.</description>
    <label>Customer Payment</label>
    <nameField>
        <displayFormat>CPAY-{00000}</displayFormat>
        <label>Customer Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>