force-app/main/default/objects/Customer_Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Payments</relationshipLabel>
    <relationshipName>Customer_Payments_Acct</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>