force-app/main/default/objects/Customer_Payment__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>