force-app/main/default/objects/Customer_Payment__c/fields/Collection_Pct__c.field-meta.xml
<CustomField>
    <fullName>Collection_Pct__c</fullName>
    <label>Collection Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>