force-app/main/default/objects/Customer_Payment__c/fields/Is_Full_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Payment__c</fullName>
    <label>Is Full Payment</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>