force-app/main/default/objects/Customer_Payment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Payments</relationshipLabel>
    <relationshipName>Customer_Payments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>