force-app/main/default/objects/Customer_Payment__c/fields/Processing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Processing_Notes__c</fullName>
    <label>Processing Notes</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>