force-app/main/default/objects/Customer_Payment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>API</fullName><default>false</default><label>API</label></value>
            <value><fullName>File_Upload</fullName><default>false</default><label>File Upload</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
            <value><fullName>ERP_Integration</fullName><default>false</default><label>ERP Integration</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>